overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -42,8 +42,8 @@ body{
     border-radius: 5px;
 
     
-} */
-
+}
+ */
 
 
 
@@ -72,7 +72,14 @@ body{
     transition: all .4s ease;
     background-color: rgb(78, 78, 78);
     position: relative;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column wrap;
+    
+    overflow:hidden;
+    
     
 }
 .user-card:hover {
@@ -161,7 +168,7 @@ body{
         position: relative;
     }
     .avatar{
-        width: 60%;
+        width: 55%;
     }
     .search-bar input{
         font-size: 18px;
@@ -182,7 +189,7 @@ body{
     .user-card{
         width:93px;
         height: 127px ;
-        font-size: 12px;
+        font-size: 10px;
         /* border: 1px solid black; */
         margin: 10px;
         border-radius: 5px;
@@ -191,7 +198,7 @@ body{
         position: relative;
     }
     .avatar{
-        width: 50px;
+        width: 50%;
     }
     .search-bar input{
         font-size: 18px;
